# Compatibility-OpenAI

./: LICENSE  README.md  pyproject.toml
pieces_openai/: chat.py
