[tool.poetry]
name = "compatibility-openai"
version = "0.1.0"
description = "OpenAI compatibility for Pieces"
authors = ["Bishoy-at-pieces <bishoy@pieces.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pieces_os_client = "^3.1.0"
fastapi = "^0.112.2"
openai = "^1.43.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
